--- a/templates/tutorial/view_part_online_common.part.html
+++ b/templates/tutorial/view_part_online_common.part.html
@@ -4,9 +4,9 @@
 
 {% with tutorial=part.tutorial%}
     {% with authors=tutorial.authors.all %}
-        {% with chapters=part.get_chapters %}            
-            {% if part.get_introduction_online %}
-                {{ part.get_introduction_online|safe }}
+        {% with chapters=part.chapters %}            
+            {% if part.intro %}
+                {{ part.intro|safe }}
             {% else %}
                 <p>Pas d'introduction.</p>
             {% endif %}
@@ -22,7 +22,7 @@
                 <li>
                     <a href="{% url "view-chapter-url-online" tutorial.pk tutorial.slug part.slug chapter.slug %}">Chapitre {{ chapter.part.position_in_tutorial }}.{{ chapter.position_in_part }} | {{ chapter.title }}</a>
                     <ul>
-                        {% for extract in chapter.get_extracts %}
+                        {% for extract in chapter.extracts %}
                         <li>
                             <a href="{% url "view-chapter-url-online" tutorial.pk tutorial.slug part.slug chapter.slug %}#{{ extract.position_in_chapter }}-{{ extract.title|slugify }}">
                                 {{ extract.title }}
@@ -35,8 +35,8 @@
                 {% endfor %}
             </ul>
 
-            {% if part.get_conclusion_online %}
-                {{ part.get_conclusion_online|safe}}
+            {% if part.conclu %}
+                {{ part.conclu|safe}}
             {% else %}
                 <p>Pas de conclusion.</p>
             {% endif %}
