Display last commit in footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -322,10 +322,10 @@
     {# Footer #}
 
     <div class="row full-width footer">
-        <div class="large-4 columns">
-            <p>&copy; ZesteDeSavoir 2013</p>
+        <div class="large-6 columns">
+            <p>&copy; ZesteDeSavoir 2013 : <small>{{git_version}}</small></p>
         </div>
-        <div class="large-8 columns">
+        <div class="large-6 columns">
             <ul class="inline-list right">
                 
                 <li><a href="{% url "zds.pages.views.roadmap" %}">Roadmap</a></li>
