Fix display email

--- a/templates/email/mp.html
+++ b/templates/email/mp.html
@@ -1,10 +1,14 @@
-<html>
+<html lang="fr">
+<head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
 <body>
+<h2></h2>
 Bonjour <strong>{{username}}</strong>,
 
-{{author}} vous a envoyé un message privé sur ZesteDeSavoir.com
+<strong>{{author}}</strong> vous a envoyé un message privé sur ZesteDeSavoir.com
 
-Pour le lire, <a href="{{url}}">cliquez ici</a>
+Pour le lire, <a href="http://zestedesavoir.com{{url}}">cliquez ici</a>
 
 <br />
 Cordialement,
