--- a/templates/email/mp.html
+++ b/templates/email/mp.html
@@ -3,16 +3,22 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
 <body>
-<h2></h2>
+<h2>Nouveau MP</h2>
+<br />
+<br />
 Bonjour <strong>{{username}}</strong>,
-
+<br />
+<br />
 <strong>{{author}}</strong> vous a envoyé un message privé sur ZesteDeSavoir.com
-
+<br />
+<br />
 Pour le lire, <a href="http://zestedesavoir.com{{url}}">cliquez ici</a>
-
+<br />
+<br />
 <br />
 Cordialement,
-
+<br />
+<br />
 L'équipe ZesteDeSavoir
 
 </body>
