Add geo address in profile

--- a/templates/member/profile.html
+++ b/templates/member/profile.html
@@ -39,6 +39,9 @@
             <p>
                 {{ profile.last_ip_address }}
             </p>
+            <p>
+                {{ profile.get_city }}
+            </p>
             {% endif %}
     </div>
     <div class="large-10 columns">
