Create forms, views and class in model to allow user to modify his password

--- a/templates/member/login.html
+++ b/templates/member/login.html
@@ -61,6 +61,9 @@
                         <input type="checkbox" name="remember">
                         Connexion automatique
                     </label>
+                    <label>
+                        <a href="{% url "zds.member.views.forgot_password" %}">Mot de passe oublié ?</a>
+                    </label>
                 </div>
             </div>
 
