--- a/templates/email/confirm_forgot_password.html
+++ b/templates/email/confirm_forgot_password.html
@@ -19,7 +19,7 @@ Si vous n'avez pas demandé une réinitialisation du mot de passe, IGNOREZ et EF
 Instructions d'activation ci-dessous
 <hr>
 <br />
-Cliquez simplement sur le lien et complétez le reste du formulaire : <a href="http://zestedesavoir.com{{url}}">cliquez ici</a>.
+Cliquez ou recopiez simplement le lien et complétez le reste du formulaire : http://zestedesavoir.com{{url}}.
 <br />
 <br />
 <br />
