Integrate HTML/CSS/JS ressources on the project

--- a/templates/newsletter/failed.html
+++ b/templates/newsletter/failed.html
@@ -9,8 +9,7 @@
 			<main role="main">
 				<section>
 					<hgroup>
-						<h2>Merci pour votre souscription à la Newsletter</h2>
-						<h3>Vous serez aux premières loges à l'ouverture de ZesteDeSavoir</h3>
+						<h2>Vous êtes déjà inscris à la newsletter</h2>
 					</hgroup>
 				</section>
 			</main>
