Remove for dropdown for articles and create new view in member to retrieve all articles

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,33 +69,6 @@
             {# in order to set the menu entry active or not. #}
 
             <ul class="left">
-                <li {% block menu_home %}{% endblock %}>
-                    <a href="{% url "zds.pages.views.home" %}">
-                        <i class="fi-home"></i>
-                        Accueil
-                    </a>
-                </li>
-                <li class="{% block menu_article %}{% endblock %} has-dropdown " >
-                    <a href="{% url "zds.article.views.index" %}">
-                        <i class="fi-clipboard"></i>
-                        Articles
-                    </a>
-                    <ul class="dropdown">
-                        <li class="divider"></li>
-                        <li><label>Participez</label></li>
-                        <li><a href="{% url "zds.article.views.new" %}">Rédiger un article</a></li>
-                        {% if user.is_authenticated %}
-                        <li><a href="{% url "zds.article.views.list" %}">Articles communautaires</a></li>
-                        {% endif %}
-                        {% if perms.article.change_article %}
-                        <li class="divider"></li>
-                        <li><label>Validation</label></li>
-                        <li><a href="{% url "zds.article.views.list_validation" %}">Zone de validation</a></li>
-                        <li><a href="{% url "zds.article.views.list_validation" %}?type=reserved">En cours de validation</a></li>
-                        <li><a href="{% url "zds.article.views.list_validation" %}?type=orphan">En attente de validateur</a></li>
-                        {% endif %}
-                    </ul>
-                </li>
                 <li class="{% block menu_tutorial %}{% endblock %} has-dropdown " >
                     <a href="{% url "zds.tutorial.views.index" %}">
                         <i class="fi-book"></i>
@@ -113,6 +86,13 @@
                         <li class="divider"></li>
                         <li><a href="{% url "zds.tutorial.views.index" %}">Tous &rarr;</a></li>
                     </ul>
+                </li>
+
+                <li class="{% block menu_article %}{% endblock %}" >
+                    <a href="{% url "zds.article.views.index" %}">
+                        <i class="fi-clipboard"></i>
+                        Articles
+                    </a>
                 </li>
                 
                 <li class="{% block menu_forum %}{% endblock %} has-dropdown">
@@ -264,11 +244,19 @@
                         <li class="divider"></li>
                         <li><label>Mon Compte</label></li>
                         <li><a href="{% url "zds.member.views.details" user.username %}"><i class="icon-user"></i> Mon Profil</a></li>
+                        <li><a href="{% url "zds.member.views.publications" %}"><i class="icon-list"></i> Mes Tutoriels</a></li>
+                        <li><a href="{% url "zds.member.views.articles" %}"><i class="icon-list"></i> Mes Articles</a></li>
                         <li><a href="{% url "zds.gallery.views.gallery_list" %}"> Galeries d'images</a></li>
-                        <li><a href="{% url "zds.member.views.publications" %}"><i class="icon-list"></i> Mes tutoriels</a></li>
                         <li><a href="{% url "zds.member.views.settings_profile" %}"><i class="icon-cog"></i> Paramètres</a></li>
                         {% if perms.tutorial.change_tutorial %}
-                        <li><a href="{% url "zds.tutorial.views.list_validation" %}">Admin</a></li>
+                        <li><a href="{% url "zds.tutorial.views.list_validation" %}">Administration</a></li>
+                        {% endif %}
+                        {% if perms.article.change_article %}
+                        <li class="divider"></li>
+                        <li><label>Validation</label></li>
+                        <li><a href="{% url "zds.article.views.list_validation" %}">Zone de validation</a></li>
+                        <li><a href="{% url "zds.article.views.list_validation" %}?type=reserved">En cours de validation</a></li>
+                        <li><a href="{% url "zds.article.views.list_validation" %}?type=orphan">En attente de validateur</a></li>
                         {% endif %}
                         <li><a href="{% url "zds.member.views.logout_view" %}"><i class="icon-signout"></i> Déconnexion</a></li>
                     </ul>
