--- a/templates/article/validation.html
+++ b/templates/article/validation.html
@@ -19,7 +19,15 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="row">
+  <div class="large-12 columns">
+    <dl class="sub-nav">
+      <dd><a href="{% url "zds.article.views.list_validation" %}" class="button">Zone de validation</a></dd>
+      <dd><a href="{% url "zds.article.views.list_validation" %}?type=reserved" class="button">En cours de validation</a></dd>
+      <dd><a href="{% url "zds.article.views.list_validation" %}?type=orphan" class="button">En attente de validateur</a></dd>
+    </dl>
+  </div>
+</div>
 <div class="row">
     <div class="large-12 columns">
         {% if validations %}
