Changes publications to tutorials in member module.

--- a/templates/base.html
+++ b/templates/base.html
@@ -244,7 +244,7 @@
                         <li class="divider"></li>
                         <li><label>Mon Compte</label></li>
                         <li><a href="{% url "zds.member.views.details" user.username %}"><i class="icon-user"></i> Mon Profil</a></li>
-                        <li><a href="{% url "zds.member.views.publications" %}"><i class="icon-list"></i> Mes Tutoriels</a></li>
+                        <li><a href="{% url "zds.member.views.tutorials" %}"><i class="icon-list"></i> Mes Tutoriels</a></li>
                         <li><a href="{% url "zds.member.views.articles" %}"><i class="icon-list"></i> Mes Articles</a></li>
                         <li><a href="{% url "zds.gallery.views.gallery_list" %}"> Galeries d'images</a></li>
                         <li><a href="{% url "zds.member.views.settings_profile" %}"><i class="icon-cog"></i> Paramètres</a></li>
