--- a/templates/member/actions.html
+++ b/templates/member/actions.html
@@ -24,7 +24,7 @@
                 </a>
             </li>
             <li>
-                <a href="{% url "zds.member.views.publications" %}">
+                <a href="{% url "zds.member.views.tutorials" %}">
                     Voir vos publications
                 </a>
             </li>
